config to Debix_SOM_A V1.0.1

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -710,21 +710,4 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mp-evk.dtb \
 			imx8mp-debix-core-TD070A.dtb \
 			imx8mp-debix-core-TD080A.dtb \
 			imx8mp-debix-core-TD080B.dtb \
-			imx8mp-debix-core-TD101A.dtb \
-			imx8mp-debix-core-gc2145.dtb \
-			imx8mp-debix-core-ov5640.dtb \
-			imx8mp-debix-core-ar1335.dtb \
-			imx8mp-debix-4g-board.dtb \
-			imx8mp-debix-io-TD050A.dtb \
-			imx8mp-debix-io-TD070A.dtb \
-			imx8mp-debix-io-TD080A.dtb \
-			imx8mp-debix-io-TD080B.dtb \
-			imx8mp-debix-io-TD101A.dtb \
-			imx8mp-debix-io-board.dtb \
-			imx8mp-debix-io-raspberrypi-touchscreen.dtb \
-			imx8mp-debix-lora-TD050A.dtb \
-			imx8mp-debix-lora-TD070A.dtb \
-			imx8mp-debix-lora-TD080A.dtb \
-			imx8mp-debix-lora-TD080B.dtb \
-			imx8mp-debix-lora-TD101A.dtb \
-			imx8mp-debix-lora-board.dtb
+			imx8mp-debix-core-TD101A.dtb 
