--- a/arch/arm64/configs/imx_v8_defconfig
+++ b/arch/arm64/configs/imx_v8_defconfig
@@ -616,13 +616,13 @@ CONFIG_VIDEO_NXP_NEOISP=m
 CONFIG_VIDEO_HANTRO=m
 #CONFIG_VIDEO_IMX219=m
 CONFIG_VIDEO_OV5640=m
-CONFIG_VIDEO_GC2145=y
+CONFIG_VIDEO_GC2145=m
 CONFIG_VIDEO_OV5645=m
-CONFIG_VIDEO_AP1302=y
+CONFIG_VIDEO_AP1302=m
 CONFIG_VIDEO_AP130X=m
 CONFIG_VIDEO_OX03C10_DRV=m
 CONFIG_VIDEO_OX05B1S=m
-CONFIG_VIDEO_MT9M114=y
+CONFIG_VIDEO_MT9M114=m
 CONFIG_VIDEO_MAX96724=m
 CONFIG_VIDEO_MX95MBCAM=m
 CONFIG_VIDEO_DS90UB953=m
@@ -675,7 +675,7 @@ CONFIG_DRM_IMX95_PIXEL_LINK=y
 CONFIG_DRM_DW_HDMI_AHB_AUDIO=m
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=m
 CONFIG_DRM_DW_HDMI_GP_AUDIO=y
-CONFIG_DRM_DW_HDMI_CEC=m
+CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_ITE_IT6161=y
 CONFIG_DRM_IMX=y
@@ -1245,6 +1245,8 @@ CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=y
 CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN=y
+
+CONFIG_SERIAL_CH9434=y
 
 CONFIG_GPIO_SYSFS=y
 CONFIG_WIREGUARD=m
