EMB-IMX8MP-07 V1.0.2 Modify linux,cma to 0x1c000000 to solve 2GBDDR board gst-play can not play video.

--- a/arch/arm64/boot/dts/freescale/imx8mp-evk.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-evk.dts
@@ -1646,6 +1646,11 @@
 	status = "okay";
 };
 
+&{/reserved-memory/linux,cma} {
+       size = <0 0x1c000000>;
+       alloc-ranges = <0 0x40000000 0 0xC0000000>;
+};
+
 &mix_gpu_ml {
 	status = "okay";
 };
